--- a/src/components/Header/headerStyle.scss
+++ b/src/components/Header/headerStyle.scss
@@ -1,23 +1,49 @@
-.appheader{
+#appheader{
 	width: 100%;
 	display: inline-block;
-	border: 1px solid black;
-	margin-bottom: 20px; 
-}
-.appheader div{
-	display: inline-block;
-	padding-left: 20px;
-}
-.appheader div h2{
-}
-.appheader ul li{
-	max-width: 100px;
-	min-width: 140px;
-	width: 10%;
-	float: left;
+	box-shadow: 1px 1px 5px 0px #bdbdbd;
+	position:relative;
+	div{
+		display: inline-block;
+		h2{
+			padding: 20px 100px;
+			color:#FF9800;
+		}
+	}
 
-}
-.appheader ul li a{
-	text-decoration: none;
-	padding: 10px 10px;
+	.searchbar{
+		padding-left:100px;
+	}
+	ul{
+		li{
+			max-width: 100px;
+			min-width: 140px;
+			width: 10%;
+			float: left;
+			a{
+				color: #848484;
+    			font-weight: 600;
+			}
+		}
+	}
+	.cart-details{
+		vertical-align:super;
+		cursor:pointer;
+		.cart-count{
+			position: absolute;
+		    margin: 2px;
+		    top: 20px;
+		    background-color: #ec824e;
+		    color: #ffffff;
+		    padding: 2px 6px;
+		    border-radius: 4px;
+		}
+	}
+	.productCount{
+		background: #FF6600;
+	    padding: 0px 5px;
+	    color: white;
+	    border-radius: 3px;
+	    font-size: 13px;
+	}
 }
