--- a/src/components/ProductsPage/productStyle.scss
+++ b/src/components/ProductsPage/productStyle.scss
@@ -1,28 +1,34 @@
 .product-details{
-	float: right;
-	width: 80%;
-}
-.product-item{
-	padding: 20px 8px; 
-	/*min-width: 200px;
-	max-width: 500px;*/
-	width: 20%;
-	float: left;
-}
-img{
-	height: 200px;
-	width: 150px;
-}
-.productHeader-details{
-	padding-left: 20px;
-}
-.productHeader{
-	width: 50%;
-	display: inline-block;
-	float: left;
-}
-.productFilter{
-	width: 50%;
-	display: inline-block;
-	float: right;
+	padding-left:200px;
+	.product-item{
+		padding: 20px 8px; 
+		/*width: 15%;
+		min-width: 200px;
+		max-width: 400px;*/
+		float: left;
+	}
+	.productHeader-details{
+		display: inline-block;
+		width: 100%;
+	}
+	#products-list{
+		img{
+			height: 200px;
+			width: 150px;
+		}
+	}
+	h3{
+		color: black;
+		padding: 20px;
+		font-size: 30px;
+		font-weight: Italic;
+	}
+	.productHeader{
+		width: 48%;
+		float: left;
+	}
+	.productFilter{
+		width: 50%;
+		float: right;
+	}
 }
