--- a/src/components/SideBar/SideBarStyle.scss
+++ b/src/components/SideBar/SideBarStyle.scss
@@ -1,9 +1,19 @@
 .sidebar-div{
-	margin: 20px;
 	position: fixed;
 	height: 100%;
-	width: 20%;
-	max-width: 200px;
-	float: left;
-	border: 1px solid black;
+	width: 200px;
+	border-right: 1px solid black;
+}
+.sidebar-div div{
+	margin: 20px;
+}
+.sidebar-div div ul{
+	padding-top: 20px;
+li{
+	padding-left: 20px;
+}
+}
+.sidebar-div div h4{
+	font-size: 20px;
+	font-weight: bold;
 }
