--- a/src/components/appStyle.scss
+++ b/src/components/appStyle.scss
@@ -1,26 +1,29 @@
-
 h2{
-	color: red;
-	font-size: 40px;
-	text-align: center;
+	font-size: 38px;
+	font-weight: bold;
 }
-/*.product_style{
-	float: right;
-	width: 80%;
-}
-.each_product{
-	padding: 20px 8px;
-	height: 200px;
-	min-width: 200px;
-	max-width: 500px;
-	width: 20%;
-	float: left;
-}*/
 ul{
 	list-style-type: none;
 	line-height: 25px;
 	li{
 		font-weight: 200;
-	}
-	
+	}	
 }
+
+a{
+	text-decoration: none;
+}
+
+input{
+	border: 1px solid #dedede;
+    border-radius: 4px;
+    font-size: 12px;
+    height: 32px;
+    padding-left: 10px;
+    width:250px;
+}
+
+input[type="checkbox"]{
+	width:20px;
+}
+
