Apply css to the files.

--- a/src/components/SideBar/SideBarStyle.scss
+++ b/src/components/SideBar/SideBarStyle.scss
@@ -1,11 +1,6 @@
 .sidebar-div{
-	position: fixed;
-	height: 100%;
-	width: 200px;
-	border-right: 1px solid black;
-}
-.sidebar-div div{
-	margin: 20px;
+	width: 20%;
+	float: left;
 }
 .sidebar-div div ul{
 	padding-top: 20px;
