--- a/src/components/ProductsPage/productStyle.scss
+++ b/src/components/ProductsPage/productStyle.scss
@@ -1,11 +1,15 @@
 .product-details{
-	padding-left:200px;
+	float:right;
+	width: 78%;
+	border-left: 1px solid #e6e6e6;
 	.product-item{
-		padding: 20px 8px; 
-		/*width: 15%;
-		min-width: 200px;
-		max-width: 400px;*/
-		float: left;
+		display: inline-block;
+	    margin: 10px;
+	    background-color: #fbfbfb;
+	    min-width: 200px;
+	    .product-text{
+	    	text-align:center;
+	    }
 	}
 	.productHeader-details{
 		display: inline-block;
@@ -14,7 +18,7 @@
 	#products-list{
 		img{
 			height: 200px;
-			width: 150px;
+			width: 200px;
 		}
 	}
 	h3{
@@ -30,5 +34,16 @@
 	.productFilter{
 		width: 50%;
 		float: right;
+		padding: 24px 0px;
+		font-size: 20px;
+		font-weight: 100;
+		span{
+			padding-left:20px;
+			select{
+				width: 200px;
+			    font-size: 15px;
+			    height: 30px;
+			}
+		}	
 	}
 }
