--- a/src/components/ProductsPage/productStyle.scss
+++ b/src/components/ProductsPage/productStyle.scss
@@ -15,12 +15,26 @@
 		display: inline-block;
 		width: 100%;
 	}
+
 	#products-list{
-		img{
+	.product-image{
+			position: relative;
 			height: 200px;
 			width: 200px;
+			margin: auto;
 		}
+			img{
+				position: absolute;
+				top:0;
+				bottom:0;
+				right:0;
+				left:0;
+				margin: auto;
+				max-width: 100%;
+				max-height: 100%;
+			}
 	}
+		
 	h3{
 		color: black;
 		padding: 20px;
