Added the clicking event for the header menu. When we click those, it will show the corresponding products.

--- a/src/components/Header/headerStyle.scss
+++ b/src/components/Header/headerStyle.scss
@@ -20,10 +20,9 @@
 			min-width: 140px;
 			width: 10%;
 			float: left;
-			a{
-				color: #848484;
-    			font-weight: 600;
-			}
+			color: #848484;
+    		font-weight: 600;
+    		cursor: pointer;
 		}
 	}
 	.cart-details{
