--- a/src/components/appStyle.scss
+++ b/src/components/appStyle.scss
@@ -14,7 +14,7 @@ a{
 	text-decoration: none;
 }
 
-input{
+input[type="search"]{
 	border: 1px solid #dedede;
     border-radius: 4px;
     font-size: 12px;
