Add the function for search items by id, name and category

--- a/src/components/appStyle.scss
+++ b/src/components/appStyle.scss
@@ -26,7 +26,11 @@ input[type="search"]{
 input[type="checkbox"]{
 	width:20px;
 }
-
+.no-item{
+	text-align: center;
+	margin: 100px 0px;
+	font-size: 25px;
+}
 
 .container{
 	padding:20px;
