--- a/src/components/ProductsPage/productStyle.scss
+++ b/src/components/ProductsPage/productStyle.scss
@@ -9,7 +9,20 @@
 	    min-width: 200px;
 	    .product-text{
 	    	text-align:center;
+	    	ul{
+	    		background: white;
+	    	}
+	    	button{
+	    		display: none;
+	    	}
 	    }
+	}
+	.product-item:hover{
+		outline: 1px solid #eaeaec;
+	}
+	.product-item:hover button{
+		display: inline-block;
+		text-align: center;
 	}
 	.productHeader-details{
 		display: inline-block;
@@ -17,22 +30,23 @@
 	}
 
 	#products-list{
-	.product-image{
-			position: relative;
-			height: 200px;
-			width: 200px;
-			margin: auto;
-		}
-			img{
-				position: absolute;
-				top:0;
-				bottom:0;
-				right:0;
-				left:0;
+		.product-image{
+				position: relative;
+				height: 200px;
+				width: 200px;
 				margin: auto;
-				max-width: 100%;
-				max-height: 100%;
+				img{
+					position: absolute;
+					top:0;
+					bottom:0;
+					right:0;
+					left:0;
+					margin: auto;
+					max-width: 100%;
+					max-height: 100%;
+				}
 			}
+				
 	}
 		
 	h3{
