Added the style for the select tag inside the cart page

--- a/src/components/CartInfo/cartStyle.scss
+++ b/src/components/CartInfo/cartStyle.scss
@@ -25,6 +25,11 @@
 	    	td{
 		    	text-align: center;
 		    	padding: 20px 60px;
+		    	select{
+		    		width: 40px;
+				    font-size: 12px;
+				    height: 20px;
+		    	}
 	    	}
 	    }
 	    .table-col-name{
