--- a/src/components/ProductsPage/productStyle.scss
+++ b/src/components/ProductsPage/productStyle.scss
@@ -8,11 +8,12 @@
 	    background-color: #fbfbfb;
 	    min-width: 200px;
 	    .product-text{
+	    	position: relative;
 	    	text-align:center;
 	    	ul{
 	    		background: white;
 	    	}
-	    	button{
+	    	.product-base{
 	    		display: none;
 	    	}
 	    }
@@ -20,9 +21,16 @@
 	.product-item:hover{
 		outline: 1px solid #eaeaec;
 	}
-	.product-item:hover button{
-		display: inline-block;
-		text-align: center;
+	.product-item:hover .product-base{
+		display: block;
+	    width: 200px;
+	    height: 21px;
+	    cursor: pointer;
+	    position: absolute;
+	    top: 5px;
+	    color: blue;
+	    background: white;
+	    z-index: 1;
 	}
 	.productHeader-details{
 		display: inline-block;
